[package]
name = "windradabstand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
image = "0.24.4"

[[bin]]
name = "processor"
path = "bin/9_sdf-processor.rs"

[profile.release]
opt-level = 3
