[package]
name = "windradabstand"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
image = "0.24.4"
json = "0.12.4"
serde = { version = "1.0.145", features = ["derive"] }

[profile.release]
opt-level = 3

[[bin]]
name = "calc_sdf"
path = "src/calc_sdf.rs"

[[bin]]
name = "merge"
path = "src/merge.rs"
